--- a/jtc_ash-bore.html
+++ b/jtc_ash-bore.html
@@ -27,10 +27,18 @@
         <li><a href="jtc_services.html">Services</a></li>
         <li> <a href="jtc_careers.html">Careers</a></li>
         <li> <a href="jtc_client-promise.html">Client Promise</a></li>
-        <li> <a href="jtc_ash-Bore.html">Emerald Ash-Bore</a></li>
+        <li> <a href="jtc_ash-bore.html">Emerald Ash-Bore</a></li>
       </ul>
     </nav>
   </header>
+  <h1>Emrald Ash-Bore</h1>
+<img src="images/bore2.jfif" alt="">
+  <h2>Fun facts</h2>
+  <p>1.The Emerald Ash Borer (EAB) is actually native to Asia including China, Korea, and Japan</p>
+  <p>2.With the help of dendrochronological reconstruction (a method of scientific dating based on the analysis of tree rings), scientists have traced EAB destruction back to the early 1990’s in Michigan.</p>
+  <p>3.An EAB beetle’s lifespan ranges from 1-2 years in North America.</p>
+  <p>4.The EAB beetle kills ash trees by destroying the water and nutrient conducting tissues under the tree’s bark.  A tree will die within two years of signs of the EAB beetle.</p>
+  <p>5.The Emerald Ash Borer is now recognized as the most harmful pest in North America</p>
 
   <footer>
   Jedds tree Care &#9830; 201 Edward Ave.&#9830; Lansing, MI 48930
