--- a/jtc_client-promise.html
+++ b/jtc_client-promise.html
@@ -27,11 +27,11 @@
         <li><a href="jtc_services.html">Services</a></li>
         <li> <a href="jtc_careers.html">Careers</a></li>
         <li> <a href="jtc_client-promise.html">Client Promise</a></li>
-        <li> <a href="jtc_ash-Bore.html">Emerald Ash-Bore</a></li>
+        <li> <a href="jtc_ash-bore.html">Emerald Ash-Bore</a></li>
       </ul>
     </nav>
   </header>
-
+<img src="images/client-promis.jpg" alt="">
   <h1>Client Promise of Satisfaction</h1>
 
   <p>We consider it critical to continuously build on the trust and confidence our clients have placed in us. Share your experience with The Care of Trees.</p>
@@ -47,8 +47,7 @@
   <h2>3. Premium value for your money.</h2>
   <p>Followed through on everything outlined in the written proposal.</p>
 
-  Our clients trust us to provide professional tree service and landscape service to protect their most precious natural assets. If you are not satisfied with the care you received, we will work with you to fix any potential issues.
-
+<p>  Our clients trust us to provide professional tree service and landscape service to protect their most precious natural assets. If you are not satisfied with the care you received, we will work with you to fix any potential issues.</p>
   Jedds Tree Care
   201 Edward Ave.
   Lansing, MI 48930
