--- a/jtc_index.html
+++ b/jtc_index.html
@@ -25,7 +25,7 @@
         <li><a href="jtc_services.html">Services</a></li>
         <li> <a href="jtc_careers.html">Careers</a></li>
         <li> <a href="jtc_client-promise.html">Client Promise</a></li>
-        <li> <a href="jtc_ash-Bore.html">Emerald Ash-Bore</a></li>
+        <li> <a href="jtc_ash-bore.html">Emerald Ash-Bore</a></li>
       </ul>
     </nav>
   </header>
