--- a/jtc_careers.html
+++ b/jtc_careers.html
@@ -42,9 +42,9 @@
   <p>  As an employee owned company, Jedds Tree Care offers a comprehensive Employee Stock Ownership Plan (ESOP), benefits, and ample opportunities for employee advancement and personal growth.  Jedds Tree Company is an Equal Opportunity Employer.</p>
 <footer>
   Jedds tree Care &#9830; 201 Edward Ave.&#9830; Lansing, MI 48930
- <i class="fa fa-twitter" style="font-size:36px;color:green"></i>
- <i class="fa fa-snapchat-square" style="font-size:36px;color:green"></i>
- <i class="fa fa-facebook-square" style="font-size:36px;color:green"></i>
+  <a href="https://twitter.com/?lang=en"> <i class="fa fa-twitter" style="font-size:36px;color:green"></a></i>
+  <a href="https://www.snapchat.com"><i class="fa fa-snapchat-square" style="font-size:36px;color:green"></a></i>
+  <a href="https://www.facebook.com"><i class="fa fa-facebook-square" style="font-size:36px;color:green"></a></i>
 </footer>
 
 </html>
