--- a/jtc_index.html
+++ b/jtc_index.html
@@ -79,9 +79,9 @@ that same day. Great service.</p>
   </article>
   <footer>
   Jedds tree Care &#9830; 201 Edward Ave.&#9830; Lansing, MI 48930
- <i class="fa fa-twitter" style="font-size:36px;color:green"></i>
- <i class="fa fa-snapchat-square" style="font-size:36px;color:green"></i>
- <i class="fa fa-facebook-square" style="font-size:36px;color:green"></i>
+  <a href="https://twitter.com/?lang=en"> <i class="fa fa-twitter" style="font-size:36px;color:green"></a></i>
+  <a href="https://www.snapchat.com"><i class="fa fa-snapchat-square" style="font-size:36px;color:green"></a></i>
+  <a href="https://www.facebook.com"><i class="fa fa-facebook-square" style="font-size:36px;color:green"></a></i>
   </footer>
 </body>
 
