--- a/jtc_services.html
+++ b/jtc_services.html
@@ -75,9 +75,9 @@
   beauty of your property and help you achieve your landscaping vision.</p>
   <footer>
   Jedds tree Care &#9830; 201 Edward Ave.&#9830; Lansing, MI 48930
- <i class="fa fa-twitter" style="font-size:36px;color:green"></i>
- <i class="fa fa-snapchat-square" style="font-size:36px;color:green"></i>
- <i class="fa fa-facebook-square" style="font-size:36px;color:green"></i>
+  <a href="https://twitter.com/?lang=en"> <i class="fa fa-twitter" style="font-size:36px;color:green"></a></i>
+  <a href="https://www.snapchat.com"><i class="fa fa-snapchat-square" style="font-size:36px;color:green"></a></i>
+  <a href="https://www.facebook.com"><i class="fa fa-facebook-square" style="font-size:36px;color:green"></a></i>
   </footer>
 </body>
 
